--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -27,7 +27,7 @@ include::partial$mirakl-first-steps.adoc[]
 
 Aufträge, die auf Voelkner erzeugt wurden, werden alle 15 Minuten in dein plentymarkets System importiert.
 
-[#order-process]
+[#order-process][#test-second-anchor]
 == Ablauf der Auftragsabwicklung
 
 So läuft die Auftragsabwicklung bei Voelkner ab:
@@ -200,7 +200,7 @@ Rabatt auf Verkaufspreis festlegen:
 . Gib einen Preis für den Rabattpreis ein.
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
 . Wähle ein Datum für die Eigenschaft. +
-→ Der Rabattpreis gilt ab 00:00 an diesem Datum.
+→ Der Rabattpreis gilt ab 00:00 Uhr an diesem Datum.
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
 . Wähle ein Datum für die Eigenschaft. +
 → Der Rabattpreis gilt bis 23:59 Uhr an diesem Datum.
@@ -221,7 +221,7 @@ Rabatt auf Staffelpreise festlegen:
 . Gib für jeden Aktionspreis einen Preis ein.
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
 . Wähle ein Datum für die Eigenschaft. +
-→ Die Rabattpreise gelten ab 00:00 an diesem Datum.
+→ Die Rabattpreise gelten ab 00:00 Uhr an diesem Datum.
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
 . Wähle ein Datum für die Eigenschaft. +
 → Die Rabattpreise gelten bis 23:59 Uhr an diesem Datum.
