--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -79,19 +79,21 @@ image::maerkte:gif-catalogue-mapping-simple-de.gif[]
 --
 
 //tag::complex-mappings[]
-Wie bei den einfachen 1:1-Zuordnungen ordnest du auch hier einem Markplatz-Datenfeld eine Einstellung in plentymarkets oder eine Eigenschaft zu. Komplexe Zuordnungen sind aber immer dann nötig, wenn es für ein Marktplatz-Datenfeld verschiedene mögliche Werte gibt. Statt Datenfelder zuzuordnen, ordnest du bei komplexen Zuordnungen also die Werte dieser Datenfelder zu. Zum Beispiel kannst du dem Marktplatz-Datenfeld *Versandart* nicht einfach das plentymarkets Datenfeld *Versandprofil* zuordnen. Warum? Der Marktplatz kann nicht wissen, welches deiner Versandprofile in plentymarkets welchem Versandprofil des Marktplatzes entspricht.
+Wie bei den einfachen 1:1-Zuordnungen ordnest du auch hier einem Markplatz-Datenfeld eine Einstellung in plentymarkets oder eine Eigenschaft zu. Komplexe Zuordnungen sind aber immer dann nötig, wenn es für ein Marktplatz-Datenfeld verschiedene mögliche Werte gibt. Statt Datenfelder zuzuordnen, ordnest du bei komplexen Zuordnungen also einzelne Werte dieser Datenfelder zu. Zum Beispiel kannst du dem Marktplatz-Datenfeld *Versandart* nicht einfach das plentymarkets Datenfeld *Versandprofil* zuordnen. Warum? Der Marktplatz kann nicht wissen, welches deiner Versandprofile in plentymarkets welchem Versandprofil des Marktplatzes entspricht.
 
 IMPORTANT: Gib bei komplexen Zuordnungen keine eigenen Werte ein. Alle Werte, die du eingibst, müssen an den Varianten gespeichert sein, entweder in einer Einstellung oder als Eigenschaftswert. Das gilt auch, wenn das Feld *Comparative value* angezeigt wird. Auch hier musst du genau den Wert aus der zugeordneten Einstellung oder Eigenschaft eingeben.
 
-Beispiele für komplexe 1:1-Zuordnungen:
-
-* Kategorien
-* Marken
-* Versandart
+Bei komplexen Zuordnungen wird immer der Wert des Marktplatzes exportiert. Nur wenn du doch einen eigenen Wert zuordnest, wird der eingegebene eigene Wert exportiert.
 
 Komplexe Zuordnungen erkennst du daran, dass sich unterhalb des Namens des Marktplatz-Datenfelds ein Eingabefeld befindet. Wenn du in das Eingabefeld klickst, werden die Werte angezeigt, die es für das Marktplatz-Datenfeld gibt.
 
 image::maerkte:catalogue-complex-mappings.png[]
+
+Beispiele für komplexe 1:1-Zuordnungen sind:
+
+* Kategorien
+* Marken
+* Versandart
 
 *_Wichtig:_* Ordne bei komplexen Zuordnungen keine eigenen Werte und keine Eigenschaften des Typs *Kein* zu.
 
@@ -111,7 +113,7 @@ Komplexe 1:1-Zuordnung erstellen:
 → Die plentymarkets Datenfelder der Gruppe werden angezeigt.
 . Klicke auf das plentymarkets Datenfeld, für das du Werte zuordnen möchtest. +
 *_Wichtig:_* Ordne keinen eigenen Wert und keine Eigenschaft des Typs *Kein* zu. +
-→ Je nachdem, welches plentymarkets Datenfeld du gewählt hast, gehst du ab jetzt unterschiedlich vor:
+. Je nachdem, welches plentymarkets Datenfeld du gewählt hast, gehst du ab jetzt unterschiedlich vor:
 
 * *_Möglichkeit 1:_* Die verfügbaren Werte des plentymarkets Datenfelds werden links angezeigt. +
   ** Klicke neben dem gewünschten Wert auf das Plus. +
@@ -122,7 +124,9 @@ Komplexe 1:1-Zuordnung erstellen:
   ** Klicke auf *Bestätigen*.
 * *_Möglichkeit 3:_* Das plentymarkets Datenfeld wird eingefügt und eine Dropdown-Liste wird angezeigt.
   ** Wähle einen Wert aus der Dropdown-Liste.
-  ** Klicke auf *Bestätigen*.
+  ** Klicke auf *Bestätigen*. +
+→ Beim Export wird der Wert des Marktplatz-Datenfelds übertragen, nicht der Wert des plentymarkets Datenfelds. +
+*_Ausnahme:_* Wenn du doch einen eigenen Wert zuordnest, wird dieser eigene Wert exportiert.
 
 *_Beispiel:_* Lieferzeit in Tagen bei Otto Market
 
@@ -254,7 +258,7 @@ Du bist dir sicher, dass du für ein Marktplatz-Datenfeld für alle Varianten de
 
 Du legst also fest:
 
-* Ich möchte, dass für dieses Marktplatz-Datenfeld für _alle_ Varianten dieses Katalogs der Wert exportiert wird, den ich in das Feld *Eigener Wert* eingegeben habe.
+* Ich möchte, dass für dieses Marktplatz-Datenfeld für _alle_ Varianten dieses Katalogs der Wert exportiert wird, den ich in das Feld *Eigener Wert* eingegeben habe. Dabei wird immer dieser eingegebene Wert exportiert, auch bei komplexen Zuordnungen, bei denen normalerweise der Wert des Marktplatzes exportiert wird. Achte deshalb darauf, dass der Wert, den du als eigenen Wert eingibst, vom Marktplatz akzeptiert wird.
 
 [.instruction]
 Eigener-Wert-Zuordnung erstellen:
