--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -1,13 +1,8 @@
 = Kontakt erstellen
 :keywords: Kontakt erstellen, Kontaktdatensatz erstellen, Kunde erstellen, Kundenkonto erstellen
+:page-pagination:
 :id: AD7ZEFD
 :author: team-crm
-
-[.previous-next-navigation]
-xref:crm:kontakt-suchen.adoc#[icon:long-arrow-left[] Kontakt suchen]
-xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten icon:long-arrow-right[]]
-
-'''
 
 Du möchtest ganz einfach, schnell und mit einer individuell anpassbaren Bedienoberfläche neue Kontakte zum Beispiel während eines Telefonats erstellen? Richte dir zunächst eine <<#ansicht-einrichten, neue Ansicht>> ganz nach deinen Wünschen ein.
 
@@ -306,9 +301,3 @@ Die Logik funktioniert folgendermaßen:
 * Beim Erstellen eines neuen Kontakts wird nach einem vorhandenen regulären Kontakt mit identischer privater E-Mail-Adresse gesucht. Wird ein Kontakt gefunden, wird dieser mit den neuen Daten aktualisiert. Wird _kein_ Kontakt gefunden, wird ein neuer regulärer Kontakt erstellt.
 
 * Wenn beim Aktualisieren eines bestehenden regulären Kontaktes die private E-Mail-Adresse geändert wird, wird zunächst gesucht, ob ein anderer regulärer Kontakt mit derselben privaten E-Mail-Adresse existiert. Ist dies der Fall, wird die private E-Mail-Adresse des aktuellen Kontaktes _nicht_ aktualisiert, alle anderen Daten jedoch schon.
-
-'''
-
-[.previous-next-navigation]
-xref:crm:kontakt-suchen.adoc#[icon:long-arrow-left[] Kontakt suchen]
-xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten icon:long-arrow-right[]]
