--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -1,13 +1,8 @@
 = Kontakt suchen
 :keywords: Kontakt suchen, Kontaktsuche, Kunden suchen, Kunde suchen, Kontakt finden, Gast suchen
+:page-pagination:
 :id: LAWRQ5I
 :author: team-crm
-
-[.previous-next-navigation]
-xref:crm:vorbereitende-einstellungen.adoc#[icon:long-arrow-left[] Vorbereitende Einstellungen vornehmen]
-xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen icon:long-arrow-right[]]
-
-'''
 
 Um einen bestimmten Kontakt zu suchen, gibst du die dir bekannten Suchbegriffe in die Filter ein. Es ist auch möglich, mehrere Suchbegriffe gleichzeitig in die Suchfelder einzugeben. Dies ermöglicht eine schnellere und genauere Suche.
 
@@ -227,9 +222,3 @@ TODO:hier später die neue Messenger-Seite verlinken
 
 * material:delete[] *Kontakt löschen*
 ** xref:crm:kontakt-bearbeiten.adoc#kontakt-loeschen[Löscht] den Kontakt nach dem Bestätigen der Sicherheitsabfrage.
-
-'''
-
-[.previous-next-navigation]
-xref:crm:vorbereitende-einstellungen.adoc#[icon:long-arrow-left[] Vorbereitende Einstellungen vornehmen]
-xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen icon:long-arrow-right[]]
