--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -1,12 +1,8 @@
 = Vorbereitende Einstellungen vornehmen
 :keywords: Adress-Layout, Adresslayout, Adresslayout Lieferschein, Kundenklasse, Kontaktklasse, Kundentyp, Typ, Kundenklasse erstellen, Typ erstellen, Eigenschaften für Kontakt erstellen, Kundeneigenschaften, Kunden Eigenschaften auf Dokumenten, Tags für Kontakte, Tags für Kunden, Kontakttags, Kunden-Tags, Rabattsystem, Rabatt auf Kundenklasse, Kundenklassenrabatt, Rabattstaffel auf Nettowarenwert, Rabatt auf Zahlungsart, Verkaufspreis als Rabatt, manueller Rabatt für Kunden, manueller Rabatt für Kontakte, Rabatt für Kunden gewähren
+:page-pagination:
 :id: V71KF8L
 :author: team-crm
-
-[.next-navigation]
-xref:crm:kontakt-suchen.adoc#[Kontakt suchen icon:long-arrow-right[]]
-
-'''
 
 Du musst einige vorbereitende Einstellungen vornehmen, damit du die Kontaktverwaltung im Menü *CRM » Kontakte* optimal nutzen kannst.
 
@@ -608,8 +604,3 @@ Rabatt für alle Artikel eines Auftrags eingeben:
 . Wähle aus der angezeigten Dropdown-Liste den Rabattsatz.
 . Klicke rechts neben der Dropdown-Liste auf *Speichern*.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-'''
-
-[.next-navigation]
-xref:crm:kontakt-suchen.adoc#[Kontakt suchen icon:long-arrow-right[]]
