--- a/docs/de-de/modules/maerkte/pages/varianten-exportieren-katalog.adoc
+++ b/docs/de-de/modules/maerkte/pages/varianten-exportieren-katalog.adoc
@@ -2,14 +2,9 @@
 :keywords: Amazon Katalog, Export Amazon, Amazon Export
 :description: Multi-Channel in plentymarkets: Erstelle einen Katalog für den Export von Variantendaten an den Marktplatz Amazon.
 :page-aliases: variantendaten-exportieren.adoc
+:page-pagination:
 :id: EABQJ7Y
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:maerkte:varianten-vorbereiten.adoc#[icon:long-arrow-left[] Varianten vorbereiten]
-xref:maerkte:fulfillment.adoc#[Fulfillment einrichten icon:long-arrow-right[]]
-
-'''
 
 Es ist so weit: Der Amazon-Katalog ist da! Mit Amazon ziehen wir den ersten großen Marktplatz auf die Kataloge um. Bis auf weiteres kannst du aber auch weiterhin den alten Export nutzen.
 
@@ -351,9 +346,3 @@ Wenn du weitere Amazon-Services nutzen möchtest:
 Wenn was schiefgegangen ist:
 
 * xref:maerkte:amazon-faq-sammlung.adoc#[Liste der FAQs und Lösungen]
-
-'''
-
-[.previous-next-navigation]
-xref:maerkte:varianten-vorbereiten.adoc#[icon:long-arrow-left[] Varianten vorbereiten]
-xref:maerkte:fulfillment.adoc#[Fulfillment einrichten icon:long-arrow-right[]]
