--- a/docs/de-de/modules/plugins/pages/plugins.adoc
+++ b/docs/de-de/modules/plugins/pages/plugins.adoc
@@ -1,4 +1,5 @@
 = Plugins
+:page-pagination:
 :author: team-plugin-core
 :pos: plugins
 :id: XPOMS9R
@@ -16,8 +17,3 @@ include::plugins:partial$anzahl-erlaubter-plugin-sets.adoc[]
 * Benötigst du eine bestimmte Funktionalität und wirst auf Marketplace nicht fündig, stelle dein Anliegen in der link:https://marketplace.plentymarkets.com/plentyprojects/[Projektbörse^] ein und erarbeite zusammen mit einer unserer link:https://marketplace.plentymarkets.com/partners[Partneragenturen^] eine Lösung. Oder...
 * Erstelle deine eigenen Plugins. Mehr Informationen dazu findest du auf link:http://developers.plentymarkets.com/[plentyDevelopers^].
 ====
-
-'''
-
-[.next-navigation]
-xref:plugins:plugins-system-hinzufuegen.adoc#[Plugins dem System hinzufügen icon:long-arrow-right[]]
