--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -1,12 +1,8 @@
 = Editing a contact
 :keywords: address, primary delivery address, primary invoice address, companies, company, VAT number, VAT no., sales representative, guest account, guest order, logged in customer, registered customer, regular access, change password, customer cannot log in, unlock login, bank details, delete customer data, delete data record, delete customer, delete contact, address layout, customer type, discount system, grant discount, discount for customer class, contact option, address option, commission, cost unit, import contact, import customer data, export customer data, plentyShop login, company, contact options
+:page-pagination:
 :id: D7GKDHM
 :author: team-crm
-
-[.previous-navigation]
-xref:crm:create-contact.adoc#[icon:long-arrow-left[] Creating a contact]
-
-'''
 
 Once you have xref:crm:create-contact.adoc#[created] a contact, you can add further details to the <<#details-individual-areas, various areas of the contact data record>>. To do so, you can <<#edit-view, create your own view>> or use one of the <<#default-views-templates, templates>> that are available in your system by default.
 
@@ -1651,8 +1647,3 @@ Create the format for the export in the *Data » FormatDesigner* menu. Create a 
 Various filter options are available for the export. You can export, for example, only contacts that you have rated with 3 stars or only contacts that are assigned to a certain owner.
 
 Import or update the data of your contacts including address options, contact options and account data via the import tool. To do so, use the import type xref:data:elasticSync-contacts.adoc#[Contacts, companies and addresses]. For further information, refer to the xref:data:ElasticSync.adoc#[Using the import tool] page of the manual.
-
-'''
-
-[.previous-next-navigation]
-xref:crm:create-contact.adoc#[icon:long-arrow-left[] Creating a contact]
