--- a/docs/en-gb/modules/crm/pages/search-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/search-contact.adoc
@@ -1,13 +1,8 @@
 = Searching for a contact
 :keywords: search contact, contact search, search customer, customer search, find contact, search guest
+:page-pagination:
 :id: LAWRQ5I
 :author: team-crm
-
-[.previous-next-navigation]
-xref:crm:preparatory-settings.adoc#[icon:long-arrow-left[] Carrying out the preparatory settings]
-xref:crm:create-contact.adoc#[Creating a contact icon:long-arrow-right[]]
-
-'''
 
 In order to search for specific contacts, enter a search term in the search fields. You can enter multiple search terms into the search fields at one time. This makes your search run quicker and be more accurate.
 
@@ -225,9 +220,3 @@ For further information, refer to the xref:crm:messenger.adoc#[Messenger] page.
 
 * material:delete[] Delete contact
 ** xref:crm:edit-contact.adoc#delete-contact[Deletes] the contact after confirming the security question.
-
-'''
-
-[.previous-next-navigation]
-xref:crm:preparatory-settings.adoc#[icon:long-arrow-left[] Carrying out the preparatory settings]
-xref:crm:create-contact.adoc#[Creating a contact icon:long-arrow-right[]]
