--- a/docs/en-gb/modules/plugins/pages/adding-plugins-system.adoc
+++ b/docs/en-gb/modules/plugins/pages/adding-plugins-system.adoc
@@ -2,12 +2,8 @@
 :author: team-plugin-core
 :keywords: plugin, extension, addon, git, github, bitbucket, gitlab, integrationen, plentymarketplace
 :description: Add plugins to your system via plentyMarketplace, Git or the integrations assistant.
+:page-pagination:
 :id: BZCJL1G
-
-[.next-navigation]
-xref:plugins:installing-added-plugins.adoc#[Installing added plugins icon:long-arrow-right[]]
-
-'''
 
 There are multiple ways of adding plugins to your plentymarkets system. Using the <<integrations-assistant, Integrations assistant>>, you can set up your online store quick and easy. You can purchase plugins on <<marketplace-plugins, plentyMarketplace>>, some for free, others for additional costs. If you need a custom plugin designed to satisfy your particular needs, you can <<git-plugins, add it via Git>>.
 
@@ -102,8 +98,3 @@ include::partial$hinzugefuegte-plugins-installieren-en_gb.adoc[]
 === Functional overview
 
 include::partial$git-repository-verwaltung-en_gb.adoc[]
-
-'''
-
-[.next-navigation]
-xref:plugins:installing-added-plugins.adoc#[Installing added plugins icon:long-arrow-right[]]
