--- a/docs/en-gb/modules/plugins/pages/configuring-installed-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/configuring-installed-plugins.adoc
@@ -2,12 +2,8 @@
 :author: team-plugin-core
 :keywords: plugin, extension, addon, container, configuration
 :description: Configure your plugins.
+:page-pagination:
 :id: H4HJIKA
-
-[.previous-navigation]
-xref:plugins:installing-added-plugins.adoc#[icon:long-arrow-left[] Installing added plugins]
-
-'''
 
 include::partial$installierte-plugins-konfigurieren-en_gb.adoc[]
 
@@ -52,8 +48,3 @@ To select container links, proceed as follows:
 include::partial$plugin-container-verknuepfung-en_gb.adoc[]
 
 include::partial$standard-container-verknuepfungen-en_gb.adoc[]
-
-'''
-
-[.previous-navigation]
-xref:plugins:installing-added-plugins.adoc#[icon:long-arrow-left[] Installing added plugins]
