--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -1,12 +1,8 @@
 = Kontakt bearbeiten
 :keywords: Adresse, primäre Lieferadresse, primäre Rechnungsadresse, Firmen, Firma, Ustidnummer, Ust ID Nummer, Handelsvertreter, Gastzugang, Gastbestellung, eingeloggter Kunde, registrierter Kunde, regulärer Zugang, Passwort ändern, Passwortänderung, Kunde kann sich nicht einloggen, Login entsperren, Bankdaten, Kundendaten löschen, Datensatz löschen, Kunde löschen, Kontakt löschen, Adresslayout, Kundentyp, Rabattsystem, Rabatte vergeben, Rabatte für Kundenklasse, Kontaktoption, Adressoption, Provision, Kostenstelle, Kontakte importieren, Kundendaten importieren, Kundendaten exportieren, plentyShop-Login, Firma, Kontaktoptionen
+:page-pagination:
 :id: D7GKDHM
 :author: team-crm
-
-[.previous-navigation]
-xref:crm:kontakt-erstellen.adoc#[icon:long-arrow-left[] Kontakt erstellen]
-
-'''
 
 Sobald du einen Kontakt xref:crm:kontakt-erstellen.adoc#[erstellt] hast, kannst du weitere Informationen in den <<#erlaeuterungen-einzelne-bereiche, verschiedenen Bereichen des Kontaktdatensatzes>> ergänzen. Dazu kannst du eine <<#ansicht-bearbeiten, individuelle Ansicht>> erstellen oder eine der <<#standardansichten-vorlagen, Vorlagen>> verwenden, die standardmäßig in deinem System vorhanden sind.
 
@@ -1651,8 +1647,3 @@ Das Format für den Export erstellst du im Menü *Daten » FormatDesigner*. Eine
 Dir stehen zahlreiche Filteroptionen für den Export zur Verfügung. Exportiere z.B. nur Kontakte, die du mit 3 Sternen bewertet hast, oder nur Kontakte, die einem bestimmten Eigner zugeordnet sind.
 
 Importiere oder aktualisiere die Daten deiner Kontakte inklusive Adressoptionen, Kontaktoptionen und Firmendaten über das Import-Tool. Nutze dazu den Import-Typ xref:daten:elasticSync-kontakte.adoc#[Kontakte, Firmen und Adressen]. Weitere Informationen findest du auf der Handbuchseite xref:daten:ElasticSync.adoc#[Import-Tool nutzen].
-
-'''
-
-[.previous-next-navigation]
-xref:crm:kontakt-erstellen.adoc#[icon:long-arrow-left[] Kontakt erstellen]
