--- a/docs/de-de/modules/maerkte/pages/_amazon-katalog-validierung.adoc
+++ b/docs/de-de/modules/maerkte/pages/_amazon-katalog-validierung.adoc
@@ -2,14 +2,9 @@
 :keywords: Kataloge validieren, Katalogvalidierung, Katalog validieren, Katalogexport validieren, Katalog prüfen, Kataloge prüfen
 :page-index: false
 :page-aliases: katalogexport-pruefen.adoc
+:page-pagination:
 :id: 307GEZD
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:maerkte:variantendaten-exportieren.adoc#[icon:long-arrow-left[] Amazon-Variantenexport per Katalog einrichten]
-xref:maerkte:fulfillment.adoc#[Fulfillment einrichten icon:long-arrow-right[]]
-
-'''
 
 Katalogexporte kannst du mit dem Tool plentyBI prüfen. Zurzeit stehen für den Marktplatz Amazon die folgenden Kennzahlen für Katalogexporte zur Verfügung:
 
@@ -35,9 +30,3 @@ include::partial$BI-catalogue-variationvalidation.adoc[]
 :market: Amazon
 
 include::partial$BI-catalogue-stockinformation.adoc[]
-
-'''
-
-[.previous-next-navigation]
-xref:maerkte:variantendaten-exportieren.adoc#[icon:long-arrow-left[] Amazon-Variantenexport per Katalog einrichten]
-xref:maerkte:fulfillment.adoc#[Fulfillment einrichten icon:long-arrow-right[]]
