--- a/docs/de-de/modules/maerkte/pages/amazon-fulfillment.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fulfillment.adoc
@@ -2,19 +2,9 @@
 :keywords: Amazon FBA, FBA, FBA-Aufträge, FBA-Auftrag, MFN, Versand von Amazon-Aufträgen, Amazon Versand
 :description: Multi-Channel in plentymarkets: Bereite deinen Versand für Amazon-Aufträge vor.
 :page-aliases: fulfillment.adoc
+:page-pagination:
 :id: QYFYPFT
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:maerkte:variantendaten-exportieren.adoc#[icon:long-arrow-left[] Amazon-Variantenexport per Katalog einrichten]
-xref:maerkte:amazon-fba-nutzen.adoc#[FBA-Service von Amazon nutzen icon:long-arrow-right[]]
-
-[.text-left]
-_oder_
-
-xref:maerkte:variantendaten-exportieren-alt.adoc#[icon:long-arrow-left[] Variantenexport über alte Technologie einrichten]
-
-'''
 
 Den Versand von Varianten, die du über Amazon verkaufst, kannst du auf verschiedene Arten organisieren:
 
@@ -122,14 +112,3 @@ Wenn du weitere Amazon-Services nutzen möchtest:
 * xref:maerkte:amazon-business-einrichten.adoc#[Amazon Business einrichten]
 * xref:maerkte:amazon-pay-einrichten.adoc#[Amazon Pay einrichten]
 * xref:maerkte:AmazonVCSDashboard.adoc#[Plugin AmazonVCSDashboard nutzen]
-
-'''
-
-[.previous-next-navigation]
-xref:maerkte:variantendaten-exportieren.adoc#[icon:long-arrow-left[] Amazon-Variantenexport per Katalog einrichten]
-xref:maerkte:amazon-fba-nutzen.adoc#[FBA-Service von Amazon nutzen icon:long-arrow-right[]]
-
-[.text-left]
-_oder_
-
-xref:maerkte:variantendaten-exportieren-alt.adoc#[icon:long-arrow-left[] Variantenexport über alte Technologie einrichten]
