--- a/docs/de-de/modules/maerkte/pages/varianten-exportieren-datenexport.adoc
+++ b/docs/de-de/modules/maerkte/pages/varianten-exportieren-datenexport.adoc
@@ -2,14 +2,9 @@
 :keywords: Export Amazon, Amazon Export, Amazon Artikelexport, Amazon Variantenexport
 :description: Multi-Channel in plentymarkets: Exportiere deine Variantendaten an den Marktplatz Amazon.
 :page-aliases: variantendaten-exportieren-alt.adoc
+:page-pagination:
 :id: 0ZI4W16
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:maerkte:varianten-vorbereiten.adoc#[icon:long-arrow-left[] Varianten vorbereiten]
-xref:maerkte:fulfillment.adoc#[Fulfillment einrichten icon:long-arrow-right[]]
-
-'''
 
 Auf dieser Seite erfährst du, wie du den Export von Varianten einrichtest und startest, wenn du noch nicht mit den neuen Katalogen arbeiten möchtest.
 
@@ -239,9 +234,3 @@ Wenn du weitere Amazon-Services nutzen möchtest:
 Wenn was schiefgegangen ist:
 
 * xref:maerkte:amazon-faq-sammlung.adoc#[Liste der FAQs und Lösungen]
-
-'''
-
-[.previous-next-navigation]
-xref:maerkte:varianten-vorbereiten.adoc#[icon:long-arrow-left[] Varianten vorbereiten]
-xref:maerkte:amazon-fba-nutzen.adoc#[FBA-Service von Amazon nutzen icon:long-arrow-right[]]
