--- a/docs/de-de/modules/plugins/pages/installierte-plugins-konfigurieren.adoc
+++ b/docs/de-de/modules/plugins/pages/installierte-plugins-konfigurieren.adoc
@@ -2,12 +2,8 @@
 :author: team-plugin-core
 :keywords: plugin, erweiterung, addon, container, konfiguration
 :description: Optionen zum Konfigurieren von Plugins.
+:page-pagination:
 :id: H4HJIKA
-
-[.previous-navigation]
-xref:plugins:hinzugefuegte-plugins-installieren.adoc#[icon:long-arrow-left[] Hinzugefügte Plugins installieren]
-
-'''
 
 Auf dieser Seite findest du Themen, die die Konfiguration von Plugins allgemein betreffen. Dazu gehören der <<lokale-vs-globale-konfiguration,Unterschied zwischen lokalen und globalen Einstellungen>> sowie das <<konfiguration-exportieren-importieren,Exportieren und Importieren von lokalen Konfigurationen>>. Außerdem werden <<container-verknuepfungen,Container-Verknüpfungen>> erläutert.
 include::partial$container-verknuepfung.adoc[]
@@ -21,8 +17,3 @@ include::partial$chapter-konfiguration-exportieren-importieren.adoc[]
 include::partial$chapter-container-verknuepfungen.adoc[]
 
 :leveloffset: -1
-
-'''
-
-[.previous-navigation]
-xref:plugins:hinzugefuegte-plugins-installieren.adoc#[icon:long-arrow-left[] Hinzugefügte Plugins installieren]
