--- a/docs/de-de/modules/plugins/pages/plugins-system-hinzufuegen.adoc
+++ b/docs/de-de/modules/plugins/pages/plugins-system-hinzufuegen.adoc
@@ -2,12 +2,8 @@
 :author: team-plugin-core
 :keywords: plugin, erweiterung, addon, git, github, bitbucket, gitlab, integrationen, plentymarketplace
 :description: Finde heraus, wie du Plugins zu deinem System hinzufügen kannst.
+:page-pagination:
 :id: BZCJL1G
-
-[.next-navigation]
-xref:plugins:hinzugefuegte-plugins-installieren.adoc#[Hinzugefügte Plugins installieren icon:long-arrow-right[]]
-
-'''
 
 Du hast verschiedene Möglichkeiten, um Plugins zu deinem plentymarkets System hinzuzufügen. Mit dem <<integrationen-assistent, Integrationen-Assistenten>> setzt du schnell und unkompliziert deinen Webshop auf. Über <<marketplace-plugins, plentyMarketplace>> kannst Plugins sowohl kostenlos als auch kostenpflichtig erwerben. Benötigst du ein Plugin, das speziell auf deine Anforderungen zugeschnitten ist, steht dir das <<git-plugins, Hinzufügen über Git>> zu Verfügung.
 
@@ -20,8 +16,3 @@ include::partial$chapter-marketplace-plugins.adoc[]
 include::partial$chapter-git-plugins.adoc[]
 
 :leveloffset: -1
-
-'''
-
-[.next-navigation]
-xref:plugins:hinzugefuegte-plugins-installieren.adoc#[Hinzugefügte Plugins installieren icon:long-arrow-right[]]
