--- a/docs/en-gb/modules/crm/pages/create-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/create-contact.adoc
@@ -1,13 +1,8 @@
 = Creating a contact
 :keywords: create contact, create contact data record, create customer, create customer account
+:page-pagination:
 :id: AD7ZEFD
 :author: team-crm
-
-[.previous-next-navigation]
-xref:crm:search-contact.adoc#[icon:long-arrow-left[] Searching for a contact]
-xref:crm:edit-contact.adoc#[Editing a contact icon:long-arrow-right[]]
-
-'''
 
 Do you want to easily and quickly create new contacts with an individually adjustable user interface, for example during a phone call? First of all, set up a <<#set-up-view, new view>> according to your needs.
 
@@ -305,9 +300,3 @@ The logic works in the following way:
 * When creating a new contact, the system searches for an existing regular contact with identical private email address. If a contact is found, this contact is updated with the new data. If _no_ contact is found, a new regular contact is created.
 
 * When updating the private email address of an existing regular contact, the system searches if another regular contact with the same private email address exists. If this is the case, the private email address of the current contact is _not_ updated. All other data, however, is updated.
-
-'''
-
-[.previous-next-navigation]
-xref:crm:search-contact.adoc#[icon:long-arrow-left[] Searching for a contact]
-xref:crm:edit-contact.adoc#[Editing a contact icon:long-arrow-right[]]
