--- a/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
@@ -1,12 +1,8 @@
 = Carrying out the preparatory settings
 :keywords: address layout, address layout delivery note, customer class, contact class, customer type, type, create customer class, create type, create properties for contact, customer properties, customer properties on documents, tags for contacts, contact tags, tags for customers, customer tags, discount system, discount on customer class, customer class discount, discount on net value of items, discount on payment method, sales price as discount, manual discount for customers, manual discount for contacts, grant discount
+:page-pagination:
 :id: V71KF8L
 :author: team-crm
-
-[.next-navigation]
-xref:crm:search-contact.adoc#[Searching for a contact icon:long-arrow-right[]]
-
-'''
 
 You have to carry out some preparatory settings to be able to optimally use the contact management in the *CRM » Contacts* menu.
 
@@ -609,8 +605,3 @@ Entering a discount for all items of an order:
 . Select the percentage value from the displayed drop-down list.
 . Click on *Save* to the right of the drop-down list.
 . *Save* (icon:save[role="green"]) the settings.
-
-'''
-
-[.next-navigation]
-xref:crm:search-contact.adoc#[Searching for a contact icon:long-arrow-right[]]
