--- a/docs/en-gb/modules/markets/pages/amazon-fulfilment.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fulfilment.adoc
@@ -2,19 +2,9 @@
 :keywords: Amazon FBA, FBA, FBA orders, FBA order
 :description: Multi-Channel in plentymarkets: Amazon FBA with plentymarkets.
 :page-aliases: fulfilment.adoc
+:page-pagination:
 :id: QYFYPFT
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:markets:variation-data-export.adoc#[icon:long-arrow-left[] Setting up catalogues for variation export to Amazon]
-xref:markets:amazon-fba.adoc#[Using the FBA service by Amazon icon:long-arrow-right[]]
-
-[.text-left]
-_or_
-
-xref:markets:variation-export-old.adoc#[icon:long-arrow-left[] Setting up variation export with old technology]
-
-'''
 
 You can organise the shipping of variations sold on Amazon in different ways:
 
@@ -122,14 +112,3 @@ If you want to use additional Amazon services:
 * xref:markets:amazon-business.adoc#[Setting up Amazon Business]
 * xref:markets:amazon-pay.adoc#[Setting up Amazon Pay]
 * xref:markets:AmazonVCSDashboard.adoc#[Using the AmazonVCSDashboard plugin]
-
-'''
-
-[.previous-next-navigation]
-xref:markets:variation-data-export.adoc#[icon:long-arrow-left[] Setting up catalogues for variation export to Amazon]
-xref:markets:amazon-fba.adoc#[Using the FBA service by Amazon icon:long-arrow-right[]]
-
-[.text-left]
-_or_
-
-xref:markets:variation-export-old.adoc#[icon:long-arrow-left[] Setting up variation export with old technology]
