--- a/docs/en-gb/modules/markets/pages/preparing-variations.adoc
+++ b/docs/en-gb/modules/markets/pages/preparing-variations.adoc
@@ -1,20 +1,9 @@
 = Amazon: Preparing variations
 :keywords: preparing variations for amazon, variations amazon, amazon variations
 :description: Multi-Channel in plentymarkets: Prepare your variations for the market Amazon.
+:page-pagination:
 :id: YJ18JF6
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:markets:amazon-setup.adoc#[icon:long-arrow-left[] Setting up Amazon in plentymarkets]
-xref:markets:variation-data-export.adoc#[Setting up catalogues for variation export to Amazon icon:long-arrow-right[]]
-
-[.text-right]
-_or_
-
-[.next-navigation]
-xref:markets:variation-export-old.adoc#[Setting up variation export with old technology icon:long-arrow-right[]]
-
-'''
 
 You have xref:markets:amazon-setup.adoc#[set up] the interface to Amazon? Great. Then get started on preparing your variations for exporting them to Amazon.
 
@@ -597,15 +586,3 @@ You have set up the interface to Amazon and have prepared your variations. Now, 
 
 * xref:markets:variation-data-export.adoc#[Setting up catalogues for variation export to Amazon]
 * xref:markets:variation-export-old.adoc#[Setting up variation export with old technology]
-
-'''
-
-[.previous-next-navigation]
-xref:markets:amazon-setup.adoc#[icon:long-arrow-left[] Setting up Amazon in plentymarkets]
-xref:markets:variation-data-export.adoc#[Setting up catalogues for variation export to Amazon icon:long-arrow-right[]]
-
-[.text-right]
-_or_
-
-[.next-navigation]
-xref:markets:variation-export-old.adoc#[Setting up variation export with old technology icon:long-arrow-right[]]
