--- a/docs/en-gb/modules/markets/pages/variation-export.adoc
+++ b/docs/en-gb/modules/markets/pages/variation-export.adoc
@@ -2,14 +2,9 @@
 :keywords: Amazon catalog, Amazon catalogue, Export Amazon, Amazon Export, exporting item data to Amazon, exporting variation data to Amazon
 :description: Multi-Channel in plentymarkets: Create a catalogue to export variation data to the market Amazon.
 :page-aliases: variation-data-export.adoc
+:page-pagination:
 :id: EABQJ7Y
 :author: team-plenty-channel
-
-[.previous-next-navigation]
-xref:markets:preparing-variations.adoc#[icon:long-arrow-left[] Preparing variations]
-xref:markets:fulfilment.adoc#[Setting up fulfilment icon:long-arrow-right[]]
-
-'''
 
 The Amazon catalogue is here! Amazon is the first big market to be offered for variation export via catalogues. However, if you prefer you can still use the old export.
 
@@ -348,9 +343,3 @@ If you want to use additional Amazon services:
 If something went wrong:
 
 * xref:markets:amazon-faq-collection.adoc#[List of FAQs and solutions]
-
-'''
-
-[.previous-next-navigation]
-xref:markets:preparing-variations.adoc#[icon:long-arrow-left[] Preparing variations]
-xref:markets:fulfilment.adoc#[Setting up fulfilment icon:long-arrow-right[]]
