--- a/docs/en-gb/modules/plugins/pages/installing-added-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/installing-added-plugins.adoc
@@ -2,13 +2,8 @@
 :author: team-plugin-core
 :keywords: plugin, extension, addon, plugin set, client, back end plugin set
 :description: Install plugins and link them to a client or user account.
+:page-pagination:
 :id: EGDTDOH
-
-[.previous-next-navigation]
-xref:plugins:adding-plugins-system.adoc#[icon:long-arrow-left[] Adding plugins to the system]
-xref:plugins:configuring-installed-plugins.adoc#[Configuring installed plugins icon:long-arrow-right[]]
-
-'''
 
 To use plugins, you first have to include them in a plugin set and deploy the set. <<creating-plugin-set, Create or copy>> a plugin set. In the plugin set, you can <<installing-plugins, install and deploy>> the plugin. Finally, to use the plugin productively, you have to link it to your <<linking-plugin-set, client>> or <<back-end-plugin-set, user account>>.
 
@@ -43,9 +38,3 @@ include::partial$plugin-set-verknuepfen-en_gb.adoc[]
 == Linking plugin sets to user accounts
 
 include::welcome:partial$backend-plugin-sets-en_gb.adoc[]
-
-'''
-
-[.previous-next-navigation]
-xref:plugins:adding-plugins-system.adoc#[icon:long-arrow-left[] Adding plugins to the system]
-xref:plugins:configuring-installed-plugins.adoc#[Configuring installed plugins icon:long-arrow-right[]]
